--- a/assets/css/tooplate-style.css
+++ b/assets/css/tooplate-style.css
@@ -288,6 +288,13 @@ html {
 
 /* Section */
 
+.aau{
+    width: 150px;
+    height: 150px;
+}
+
+
+
 .section {
     color: #fff;
     width: 55%;
@@ -301,7 +308,7 @@ html {
 
 .section-heading {
     text-align: Center;
-    padding: 60px 0 40px 0;
+  padding-bottom: 60px;
 }
 
 .section-heading h2 {
